# WireMaster

./: .gitignore  .gitmodules  BasicInteraction.json  CMakeLists.txt  LICENSE  README.md
src/: WireMaster.cpp  WireMaster.h  config.h  main.cpp
src/Actions/: Actions.cpp  Actions.h
src/Application/: application.cpp
src/Avionic/: Avionic.cpp  Avionic.h
src/BusConfig/: BusConfig.cpp  BusConfig.h
